--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "aadb2c",
-    "displayName": "Azure AD B2C",
-    "description": "Azure AD B2C custom policy extension",
+    "displayName": "Azure AD B2C fork",
+    "description": "Azure AD B2C custom policy extension forked",
     "version": "1.3.4",
-    "publisher": "AzureADB2CTools",
+    "publisher": "AI Club",
     "engines": {
         "vscode": "^1.30.0"
     },
@@ -28,6 +28,10 @@
     "main": "./out/extension",
     "contributes": {
         "commands": [
+            {
+				"command": "extension.helloWorld",
+				"title": "Hello World"
+			},
             {
                 "command": "extension.insertTechnicalProfileIdp",
                 "title": "B2C Add Identity provider technical profile"
